# ladybug

./: .clang-format-ignore  .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: documentation.yml
.github/workflows/: build-and-deploy-extension.yml  build-and-deploy.yml  build-extensions.yml  ci-musl-test-workflow.yml  ci-workflow.yml  codeql.yml  java-workflow.yml  linux-wheel-workflow.yml  multiplatform-build-test.yml  nodejs-workflow.yml  precompiled-bin-workflow.yml  python-wheel-workflow.yml  release-artifacts.yml  review-fixes-ci.yml  simsimd-dispatch-test.yml  test-alpine-clang-format.yml  wasm-workflow.yml
benchmark/lsqb/: benchmark_runner.py  serializer.py
docs/: testing.md
docs/incidents/: 2026-02-16-connection-close-sigsegv.md  2026-02-16-copy-rel-segment-planner-schema-groups.md  2026-02-17-fsm-leak-copy-rollback-recovery.md  2026-02-17-minimal-test-checkpoint-timeout.md  README.md
extension/json/test/: copy_to_json.test  error.test  json_cast.test  json_utils.test  scan_json.test
scripts/: download-liblbug.sh  generate_binary_demo.sh  headers.txt  run-clang-format-docker.sh
scripts/antlr4/: Cypher.g4  hash.md5
scripts/pip-package/: package_tar.py  setup.cfg
security/: threat-model.md  threat_model.md
security/incidents/: INCIDENT-RESPONSE-PLAN.md  INCIDENT_RESPONSE_PLAN.md
src/: CMakeLists.txt
src/antlr4/: Cypher.g4
src/binder/: binder.cpp  bound_statement_visitor.cpp
src/binder/bind/: CMakeLists.txt  bind_ddl.cpp  bind_graph.cpp  bind_graph_pattern.cpp  bind_updating_clause.cpp
src/binder/bind_expression/: bind_property_expression.cpp
src/c_api/: connection.cpp  database.cpp  value.cpp
src/catalog/: catalog.cpp  catalog_set.cpp  property_definition_collection.cpp
src/catalog/catalog_entry/: rel_group_catalog_entry.cpp
src/common/: json_utils.cpp  type_utils.cpp
src/common/arrow/: arrow_array_scan.cpp
src/common/file_system/: file_system.cpp  local_file_system.cpp  virtual_file_system.cpp
src/common/types/: int128_t.cpp  types.cpp
src/common/vector/: auxiliary_buffer.cpp  value_vector.cpp
src/function/: built_in_function_utils.cpp  cast_string_non_nested_functions.cpp  comparison_functions.cpp  function_collection.cpp  vector_cast_functions.cpp  vector_string_functions.cpp
src/function/list/: list_creation.cpp
src/function/map/: map_creation_function.cpp
src/function/table/: catalog_version.cpp  disk_size_info.cpp  stats_info.cpp  storage_info.cpp
src/include/binder/: binder.h  bound_graph_statement.h  bound_statement_visitor.h
src/include/c_api/: lbug.h
src/include/catalog/: catalog.h  catalog_set.h
src/include/common/: constants.h  json_utils.h  static_vector.h  type_utils.h
src/include/extension/: extension_manager.h
src/include/main/: database.h  database_manager.h  db_config.h  option.h  plan_printer.h  settings.h  storage_driver.h
src/include/optimizer/: projection_push_down_optimizer.h
src/include/parser/: graph_statement.h  parsed_statement_visitor.h  transformer.h
src/include/planner/: planner.h
src/include/processor/: plan_mapper.h
src/include/storage/: checkpointer.h  file_handle.h  overflow_file.h  page_manager.h  page_range.h  storage_manager.h  storage_utils.h  storage_version_info.h
src/include/transaction/: transaction_manager.h
src/main/: attached_database.cpp  client_context.cpp  database.cpp  database_manager.cpp  db_config.cpp  plan_printer.cpp  settings.cpp  storage_driver.cpp
src/main/query_result/: materialized_query_result.cpp
src/optimizer/: count_rel_table_optimizer.cpp  limit_push_down_optimizer.cpp  projection_push_down_optimizer.cpp
src/parser/: parsed_statement_visitor.cpp  transformer.cpp
src/parser/transform/: CMakeLists.txt  transform_expression.cpp  transform_graph.cpp  transform_graph_pattern.cpp
src/planner/: planner.cpp
src/planner/join_order/: cardinality_estimator.cpp
src/planner/operator/: logical_operator.cpp  logical_table_function_call.cpp
src/planner/plan/: append_simple.cpp  plan_copy.cpp  plan_join_order.cpp
src/processor/map/: map_copy_from.cpp  map_count_rel_table.cpp  map_delete.cpp  map_extend.cpp  (+3 more)
src/storage/: checkpointer.cpp  disk_array_collection.cpp  free_space_manager.cpp  page_manager.cpp  shadow_file.cpp  storage_manager.cpp  storage_utils.cpp
src/storage/wal/: CMakeLists.txt  wal.cpp  wal_record.cpp  wal_replayer.cpp
src/storage/wal/records/: alter_table_entry_record.cpp  alter_table_entry_record_replay.cpp  begin_transaction_record.cpp  checkpoint_record.cpp  commit_record.cpp  copy_table_record.cpp  copy_table_record_replay.cpp  create_catalog_entry_record.cpp  create_catalog_entry_record_replay.cpp  drop_catalog_entry_record.cpp  drop_catalog_entry_record_replay.cpp  load_extension_record.cpp  load_extension_record_replay.cpp  node_deletion_record.cpp  node_deletion_record_replay.cpp  node_update_record.cpp  node_update_record_replay.cpp  rel_deletion_record.cpp  rel_deletion_record_replay.cpp  rel_detach_delete_record.cpp  rel_detach_delete_record_replay.cpp  rel_update_record.cpp  rel_update_record_replay.cpp  table_insertion_record.cpp  table_insertion_record_replay.cpp  update_sequence_record.cpp  update_sequence_record_replay.cpp
src/transaction/: transaction.cpp  transaction_manager.cpp
test/api/: api_test.cpp  system_config_test.cpp
test/c_api/: database_test.cpp
test/common/: CMakeLists.txt  uint128_test.cpp
test/copy/: copy_test.cpp  multi_copy_test.cpp
test/graph_test/: private_graph_test.cpp
test/runner/: e2e_test.cpp
test/storage/: CMakeLists.txt  detach_delete_test.cpp  storage_utils_test.cpp
test/test_helper/: test_helper.cpp
test/test_runner/: csv_converter.cpp  test_parser.cpp  test_runner.cpp
test/transaction/: checkpoint_test.cpp  transaction_test.cpp
tools/java_api/: build.gradle
tools/nodejs_api/: CMakeLists.txt  README.md  package.json
tools/python_api/: pyproject.toml
tools/shell/: embedded_shell.cpp  linenoise.cpp  shell_runner.cpp
tools/wasm/: README.md  package.json
(+174 files in other folders)
